# my-sdv-project

./: .$System Architecture Overview.drawio.bkp  .gitignore  README.md  System Architecture Overview.drawio  api_server.py  battery-basic-data.py  battery-degradation-basic.py  battery_streamer.py  cloud_listener.py  cloud_listener_basic.py  dashboard.py  main.py  pyproject.toml  train_model_rf.py
data/databank/: battery_data.db
data/processed/: battery_model_rf.pkl
system architecture/: .$System Architecture Overview.drawio.bkp  System Architecture Overview.drawio
